--- a/package.json
+++ b/package.json
@@ -1,52 +1,44 @@
 {
   "name": "fastify-backend",
-  "module": "src/index.ts",
   "type": "module",
   "private": true,
+  "module": "src/index.ts",
   "scripts": {
     "dev": "tsx watch src/index.ts | pino-pretty",
     "test": "tap",
-    "format": "biome format --write",
-    "lint": "biome lint",
-    "lint:fix": "biome lint --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "build": "tsc -p tsconfig.json"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/bun": "latest",
-    "@types/node": "^22.15.3",
-    "@types/pg": "^8.15.0",
-    "pino-pretty": "^13.0.0",
-    "tap": "^21.1.0",
-    "tsx": "^4.19.4",
-    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@fastify/autoload": "^6.3.0",
-    "@fastify/compress": "^8.0.1",
-    "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^11.0.1",
-    "@fastify/env": "^5.0.2",
-    "@fastify/passport": "^3.0.2",
     "@fastify/rate-limit": "^10.2.2",
-    "@fastify/secure-session": "^8.2.0",
     "@fastify/swagger": "^9.5.0",
     "@fastify/swagger-ui": "^5.2.2",
     "@fastify/vite": "^8.1.3",
-    "@tailwindcss/vite": "^4.1.5",
-    "@vitejs/plugin-react": "^4.4.1",
     "bcryptjs": "^3.0.2",
-    "drizzle-orm": "^0.43.1",
     "fastify": "^5.3.2",
     "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^4.0.2",
     "http-status": "^2.1.0",
     "pg": "^8.15.6",
-    "tailwindcss": "^4.1.5",
-    "vite": "^6.3.5",
     "zod": "^3.24.4"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.13.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
+    "@types/bun": "latest",
+    "@types/node": "^22.15.3",
+    "@types/pg": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-perfectionist": "^4.12.3",
+    "pino-pretty": "^13.0.0",
+    "tap": "^21.1.0",
+    "tsx": "^4.19.4"
   }
 }
