feat: add drizzle ORM and ESLint plugin configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       "~/*": ["./src/*"]
     },
     "resolveJsonModule": true,
+    "types": [
+      "node"
+    ],
     "allowImportingTsExtensions": false,
     "allowJs": true,
     // Best practices
