--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@fastify/swagger-ui": "^5.2.2",
     "@fastify/vite": "^8.1.3",
     "bcryptjs": "^3.0.2",
+    "drizzle-orm": "^0.43.1",
+    "drizzle-zod": "^0.7.1",
+    "eslint-plugin-drizzle": "^0.2.3",
     "fastify": "^5.3.2",
     "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^4.0.2",
@@ -35,6 +38,7 @@
     "@types/pg": "^8.15.0",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.26.0",
     "eslint-plugin-perfectionist": "^4.12.3",
     "pino-pretty": "^13.0.0",
